--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 file(GLOB CPP_FILES *.cc)
-add_library(${PROJECT_NAME} PUBLIC ${CPP_FILES})
+add_library(${PROJECT_NAME} STATIC ${CPP_FILES})
 target_include_directories(${PROJECT_NAME} PUBLIC
  ${PROJECT_SOURCE_DIR}/include)
